Add logo and a fancy animation to boot

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -37,6 +37,13 @@
 <![endif]-->
 
 <header class="grid-wrap">
+  <span class="icon">
+    <span class="part1"></span>
+    <span class="part2"></span>
+    <span class="part3"></span>
+    <span class="part4"></span>
+    <span class="part5"></span>
+  </span>
   <h1>Spritemapper</h1>
   <p>CSS Spritemap Generator</p>
 </header>
