Add github ribbom

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -96,5 +96,9 @@
 
 </section>
 
+<footer>
+  <a href="http://github.com/yostudios/Spritemapper" class="fork">Fork me on GitHub</a>
+</footer>
+
 </body>
 </html>
