--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>Spritemapper</title>
   <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/sm_main.css">
   <link rel="stylesheet" href="css/example.css">
   <script src="js/mootools-core.js"></script>
   <script src="js/mootools-more.js"></script>
