--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -67,7 +67,10 @@
   effectively reducing bandwidth by downloading fewer images.</p>
 
   <h2>Holy f---! how do I get it?</h2>
-  <p>Open Terminal.app, urxvt, xterm or whatever and type <code>easy_install spritemapper</code>.</p>
+  <p>Open Terminal.app, urxvt, xterm or whatever and type
+  <code>easy_install spritemapper</code>. The tarball is available
+  <a href="http://pypi.python.org/pypi/spritemapper">on Spritemapper's
+  PyPI page</a>.</p>
   <p>When done, <code>spritemapper /path/to/static/css/**.css</code> and it
   does its magic. Give the old <code>--help</code> a quick look, too.</p>
 </section>
