Expand example HTML a little

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -107,6 +107,27 @@
         <li><div class="mysprite3"></div></li>
         <li><div class="mysprite4"></div></li>
       </ul>
+      <!--
+
+        There needed to be some kind of text here or it'd look pretty
+        dumb, you see the images to the right are pretty tall and this
+        spot of HTML is just a tiny fraction of it! Hmm, what do people
+        usually do with filler space... I guess we could have some
+        flowers? Yes, let's have a flower.
+
+                       ,-.
+              ,     ,-.   ,-.
+             / \   (   )-(   )
+             \ |  ,.>-(   )-<
+              \|,' (   )-(   )
+               Y ___`-'   `-'
+               |/__/   `-'
+               |
+               |
+               |    -hrr-
+            ___|_____________
+
+      -->
     </div>
     <div class="clear"></div>
   </section>
