--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -48,7 +48,7 @@
 </header>
 
 <section id="about" class="grid-wrap">
-  <h2>Spritemapper is...</h2>
+
   <p>Spritemapper is an application that merges multiple images into one
   and generates CSS positioning for the corresponding slices.</p>
   <p><strong>Batteries included.</strong> The package consists of a
@@ -65,16 +65,59 @@
   <p>This technique drastically improves your website's loading speed,
   effectively reducing bandwidth by downloading fewer images.</p>
 
-  <h2>Holy f---! how do I get it?</h2>
-  <p>Open Terminal.app, urxvt, xterm or whatever and type
-  <code>easy_install spritemapper</code>. The tarball is available
-  <a href="http://pypi.python.org/pypi/spritemapper">on Spritemapper's
-  PyPI page</a>.</p>
-  <p>When done, <code>spritemapper /path/to/static/css/**.css</code> and it
-  does its magic. Give the old <code>--help</code> a quick look, too.</p>
+<!-->
+  <nav>
+    <a href="#installation">Installation</a>
+    <a href="#usage">Usage</a>
+    <a href="#example">Example</a>
+  </nav>
+<-->
 </section>
 
+<section id="installation" class="grid-wrap">
+  <h2>Installation</h2>
+  <p>
+    Open Terminal.app, urxvt, xterm or whatever and type
+    <code>easy_install spritemapper</code>. The tarball is available
+    <a href="http://pypi.python.org/pypi/spritemapper">on Spritemapper's
+    PyPI page</a>.
+  </p>
+</section>
+
+<section id="usage" class="grid-wrap">
+  <h2>Usage</h2>
+  <p>When done, <code>spritemapper /path/to/static/css/**.css</code> and it
+  does its magic. Give the old <code>--help</code> a quick look, too.</p>
+
+  <h3>Commandline</h3>
+  <dl>
+    <dt>
+      <tt>-h</tt>, <tt>--help</tt>
+    </dt>
+    <dd>show a help message and exit</dd>
+    <dt>
+      <tt>-c INI</tt>, <tt>--conf=INI</tt>
+    </dt>
+    <dd>read base configuration from INI (see <a href="#configuration-options">Configuration options</a>)</dd>
+    <dt><tt>--padding=N</tt></dt>
+    <dd>keep N pixels of padding between sprites</dd>
+  </dl>
+
+  <h3 id="configuration-options">Configuration options</h3>
+  <p>
+    Configuration options can be specified in one of two ways:
+    inline in the CSS, or using passing an INI file with defaults.
+    For CSS it looks something like:
+  </p>
+
+</section>
+
+
 <section id="example" class="grid-wrap">
+  <h2>Example</h2>
+  <p>
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+  </p>
   <section id="source">
     <h3>Source</h3>
     <pre class="code css"></pre>
@@ -135,6 +178,10 @@
 
 <footer>
   <a href="http://github.com/yostudios/Spritemapper" class="fork">Fork me on GitHub</a>
+  <p class="love">
+    <span>By developers to developers, <br>with love</span>
+    <a id="yostudios" href="http://yostudios.se">Yo Studios</a>
+  </p>
 </footer>
 
 </body>
