--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -86,10 +86,10 @@
 
 <section id="usage" class="grid-wrap">
   <h2>Usage</h2>
-  <p>When done, <code>spritemapper /path/to/static/css/**.css</code> and it
+  <p>Run <code>spritemapper /path/to/static/css/**.css</code> and it
   does its magic. Give the old <code>--help</code> a quick look, too.</p>
 
-  <h3>Commandline</h3>
+  <h3>Command-line</h3>
   <dl>
     <dt>
       <tt>-h</tt>, <tt>--help</tt>
