Add new awesome demo!

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>Spritemapper</title>
   <link rel="stylesheet" href="css/sm_main.css">
-  <link rel="stylesheet" href="css/example.css">
+  <link rel="stylesheet" href="css/awesome.css">
   <script src="js/mootools-core.js"></script>
   <script src="js/mootools-more.js"></script>
   <script src="js/highlight.pack.js"></script>
@@ -121,12 +121,7 @@
   <section id="source">
     <h3>Source</h3>
     <pre class="code css"></pre>
-    <ul>
-      <li><img src="img/example-sprite/image1.png" alt="image1"></li>
-      <li><img src="img/example-sprite/image2.png" alt="image2"></li>
-      <li><img src="img/example-sprite/image3.png" alt="image3"></li>
-      <li><img src="img/example-sprite/image4.png" alt="image4"></li>
-    </ul>
+    <ul></ul>
     <div class="clear"></div>
   </section>
 
@@ -134,42 +129,16 @@
     <h3>Output</h3>
     <pre class="code css"></pre>
     <div class="spritemap-preview">
-      <img src="img/example-sprite.png" alt="example-sprite">
+      <img src="img/awesome-font.png" alt="example-sprite">
     </div>
     <div class="clear"></div>
   </section>
 
   <section id="test">
     <h3>Test</h3>
-    <pre class="code html"></pre>
-    <div id="test-code">
-      <ul>
-        <li><div class="mysprite1"></div></li>
-        <li><div class="mysprite2"></div></li>
-        <li><div class="mysprite3"></div></li>
-        <li><div class="mysprite4"></div></li>
-      </ul>
-      <!--
-
-        There needed to be some kind of text here or it'd look pretty
-        dumb, you see the images to the right are pretty tall and this
-        spot of HTML is just a tiny fraction of it! Hmm, what do people
-        usually do with filler space... I guess we could have some
-        flowers? Yes, let's have a flower.
-
-                       ,-.
-              ,     ,-.   ,-.
-             / \   (   )-(   )
-             \ |  ,.>-(   )-<
-              \|,' (   )-(   )
-               Y ___`-'   `-'
-               |/__/   `-'
-               |
-               |
-               |    -hrr-
-            ___|_____________
-
-      -->
+    <p class="input"><input type="text" id="font-text" value="hello world"></p>
+    <div class="awesome">
+      <span class="letter h">h</span><span class="letter e">e</span><span class="letter l">l</span><span class="letter l">l</span><span class="letter o">o</span><span class="letter space"></span><span class="letter w">w</span><span class="letter o">o</span><span class="letter r">r</span><span class="letter l">l</span><span class="letter d">d</span>
     </div>
     <div class="clear"></div>
   </section>
