Add windows installation instructions

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -82,6 +82,34 @@
     <a href="http://pypi.python.org/pypi/spritemapper">on Spritemapper's
     PyPI page</a>.
   </p>
+
+  <h3>OS X</h3>
+  <p>Open Terminal and type <code>sudo easy_install spritemapper</code><br><em>Enjoy!</em></p>
+
+  <h3>Linux</h3>
+  <p>Someone fill me in.</p>
+
+  <h3>Windows</h3>
+  <p>
+    Make sure you have Python installed and that it is
+    <a href="http://swaroopch.com/notes/Python_en:Installation#DOS_Prompt">in your PATH</a>, also
+    include the 'Scripts' directory inside your python installation if you
+    want to run spritemapper directly from the command prompt.
+  </p>
+  <h4>Pre-built .msi installer</h4>
+  <p>
+    Go to <a href="https://github.com/yostudios/Spritemapper/downloads">Spritemapper's GitHub download page</a>
+    and download the latest .msi installer and run it.
+  </p>
+  <h4>From Source</h4>
+  <p>You will need <a href="http://git-scm.com/">Git</a> and <a href="http://pypi.python.org/pypi/setuptools">Python setuptools</a></p>
+  <p>
+    Open Command Prompt and locate a suitable folder where you want the sources and type:<br>
+    <code>git clone git://github.com/yostudios/Spritemapper.git</code><br>
+    cd into your freshly cloned repository <code>cd Spritemapper</code><br>
+    and install <code>python setup.py install</code>
+  </p>
+
 </section>
 
 <section id="usage" class="grid-wrap">
