Tighten up layout

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -64,6 +64,7 @@
   generated result.</p>
   <p>This technique drastically improves your website's loading speed,
   effectively reducing bandwidth by downloading fewer images.</p>
+  <div class="mapmerge"></div>
 </section>
 
 <section id="installation" class="grid-wrap">
