Remove strange graphic and add a divider instead.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -82,9 +82,9 @@
     <a href="http://en.wikipedia.org/wiki/Simulated_annealing">Simulated annealing</a>
     to ensure that the images are packed tightly.
   </p>
-
-  <div class="mapmerge"></div>
 </section>
+
+<div class="divider"></div>
 
 <section id="installation" class="grid-wrap">
   <h2>Installation</h2>
