--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -146,8 +146,7 @@
   <pre>/* spritemapper.output_css = foofile.css */</pre>
   <p>You can do the exact equivalent using an INI file, like this:</p>
   <pre>[spritemapper]
-  output_css = foofile.css
-  </pre>
+  output_css = foofile.css</pre>
   <p>Paths are always relative to the CSS file being processed.</p>
   <dl>
   <dt><tt>base_url</tt></dt>
