Fine-tune wording

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -55,25 +55,25 @@
   </p>
 
   <p>
-    <strong>Improves loadspeeds.</strong> 10% of a webpages loading time is
-    retrieving the HTML in one request. The remaining 90% is fetching styles,
-    scripts and images. CSS Spritemapping drastically improves your website's
-    loading speed, effectively reducing bandwidth by downloading fewer images.
+    <strong>Improve loading times.</strong> Only 10% of a webpage's loading
+    time is due to the actual page&mdash;the other 90% is spent downloading
+    styles, scripts and images. By reducing the amount of images and better
+    utilizing the connection, CSS spritemapping can reduce your website's
+    loading time.
   </p>
 
   <p>
-    <strong>Just plain old CSS.</strong> You don't have to write any extra syntax
-    to make Spritemapper work. Just define the directories of images you want
-    spritemapped and use the CSS background declaration as usual.
+    <strong>Just plain old CSS.</strong> You don't have to write any extra
+    syntax to make Spritemapper work. Just define the directories of images you
+    want spritemapped and use the CSS background declaration as usual.
   </p>
 
   <p>
     <strong>Batteries included.</strong> The package consists of a simple
     command-line tool that does the job via a Python package including its own
     PNG and CSS parser. There are no 3rd-party dependencies. Anybody who has
-    ever had the pleasant job of installing
-    <a href="http://www.pythonware.com/products/pil/">PIL</a> on various
-    platforms should have a pretty good idea about what we're trying to avoid.
+    ever had the pleasant job of installing <a href="http://www.pythonware.com/products/pil/">PIL</a>
+    should have a pretty good idea about what we're trying to avoid.
   </p>
 
   <p>
