--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -69,7 +69,7 @@
     <strong>Improve loading times.</strong> Only 10% of a webpage's loading
     time is due to the actual page&mdash;the other 90% is spent downloading
     styles, scripts and images. By reducing the amount of images and better
-    utilizing the connection, CSS spritemapping can reduce your website's
+    utilising the connection, CSS spritemapping can reduce your website's
     loading time.
   </p>
 
